--- a/Project3/CMakeLists.txt
+++ b/Project3/CMakeLists.txt
@@ -17,6 +17,13 @@ include_directories(${CMAKE_SOURCE_DIR}/../lib)
 #find_package( OpenCV REQUIRED )
 #include_directories( ${OpenCV_INCLUDE_DIRS} )
 
-# fcm.exe
 set(FCMODEL_FILES src/fmc/FCModel_BaseClass.h src/fmc/FCModelContext.h  src/fmc/FCModel.h src/fmc/FCModelFactory.h src/fmc/FCModelFactory.cpp )
+
+# fcm.exe
 add_executable(fcm src/fmc/fcm.cpp ${FCMODEL_FILES} src/utils/math_utils.h)
+
+# lang.exe
+add_executable(lang src/lang.cpp ${FCMODEL_FILES} )
+
+# find.exe
+#add_executable(lang src/findlang.cpp.cpp ${FCMODEL_FILES})
